# terminal-todos

./: .env.example  .gitignore  MIGRATION.md  QUICKSTART.md  README.md  SETUP.md  environment.yml  install.sh  pyproject.toml  todos-launcher.sh
docs/: ALL_FIXES_SUMMARY.md  ARIZE_TRACING.md  CLEANUP_DONE.md  CONTEXT_PURGING.md  CONVERSATION_CONTEXT_FEATURE.md  ERROR_LOGGING.md  FEATURE_ROADMAP.md  FIXES_SUMMARY.md  INPUT_HISTORY_FEATURE.md  MINICONDA_SETUP.md  NEW_FEATURES.md  README.md  USAGE_GUIDE.md
scripts/: README.md  install.sh  start-terminal.sh  todos-launcher.sh
src/terminal_todos/: __init__.py  __main__.py  cli.py  config.py
src/terminal_todos/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
src/terminal_todos/core/: email_service.py  export_service.py  import_service.py  note_service.py  sync_service.py  todo_service.py
src/terminal_todos/db/: connection.py  migrations.py  models.py  repositories.py
src/terminal_todos/extraction/: knowledge_extractor.py  knowledge_schemas.py  schemas.py  todo_extractor.py
src/terminal_todos/tui/: app.py
src/terminal_todos/tui/screens/: __init__.py  todo_selector_screen.py
src/terminal_todos/tui/widgets/: chat_log.py  input_bar.py  todo_list.py  todo_selector.py
src/terminal_todos/utils/: logger.py
src/terminal_todos/vector/: embeddings.py  search.py  store.py
tests/: test_import.py
